# DSOFTOLD

./: CMakeLists.txt  DOPERATORS.cpp  README.md  defines.h
DAPP/: DFSM.cpp  DFSM.h  main.cpp
DCAD/: DCAD.cpp  DCAD.h  DMESH.cpp  DMESH.h
DCAD/MODELS/: unitCube.stl
DCAD/SAVEDHEIARCHEYS/: testHeiarchey
DNN/: DNN.cpp  DNN.h  DSUDOKUGEN.cpp  DSUDOKUGEN.h  ExtraText  main.cpp
DSCRIPTS/: aviToPNG  generateMnistTrainingLists  randomizeMnistTrainingSetsOrders
informationTheory/: exe
informationTheory/imageAnalysis/: Makefile  cmake_install.cmake  exe  main.cpp
